src/test/ui/issue-51714.stderr
error[E0572]: return statement outside of function body
  --> $DIR/issue-51714.rs:12:14
   |
LL |     |_:  [_; return || {}] | {}
   |              ^^^^^^^^^^^^

error[E0572]: return statement outside of function body
  --> $DIR/issue-51714.rs:17:10
   |
LL |     [(); return || {}];
   |          ^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0572`.
